Add init folder structure

--- a/DotnetApiBoilerplatev1.0.Data/DotnetApiBoilerplatev1.0.Data.csproj
+++ b/DotnetApiBoilerplatev1.0.Data/DotnetApiBoilerplatev1.0.Data.csproj
@@ -7,4 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Base\" />
+    <Folder Include="Context\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="NewFolder\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
