--- a/DotnetApiBoilerplatev1.0.Model/DotnetApiBoilerplatev1.0.Model.csproj
+++ b/DotnetApiBoilerplatev1.0.Model/DotnetApiBoilerplatev1.0.Model.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,5 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Configuration\" />
+    <Folder Include="DTO\" />
+    <Folder Include="Entities\" />
+  </ItemGroup>
 
 </Project>
