Add base file structure for layers and init implementation for model

--- a/DotnetApiBoilerplatev1.0.BusinessLogic/DotnetApiBoilerplatev1.0.BusinessLogic.csproj
+++ b/DotnetApiBoilerplatev1.0.BusinessLogic/DotnetApiBoilerplatev1.0.BusinessLogic.csproj
@@ -8,8 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Helpers\" />
-    <Folder Include="Services\" />
+    <Folder Include="Services\Base\" />
   </ItemGroup>
 
 </Project>
