--- a/DotnetApiBoilerplatev1.0.Model/DotnetApiBoilerplatev1.0.Model.csproj
+++ b/DotnetApiBoilerplatev1.0.Model/DotnetApiBoilerplatev1.0.Model.csproj
@@ -8,9 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Configuration\" />
-    <Folder Include="DTO\" />
-    <Folder Include="Entities\" />
+    <Folder Include="DTO\In\" />
+    <Folder Include="DTO\Out\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
