--- a/DotnetApiBoilerplatev1.0/DotnetApiBoilerplatev1.0.csproj
+++ b/DotnetApiBoilerplatev1.0/DotnetApiBoilerplatev1.0.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,10 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Secrets\" />
   </ItemGroup>
 
 </Project>
