--- a/DotnetApiBoilerplatev1.0.BusinessLogic/DotnetApiBoilerplatev1.0.BusinessLogic.csproj
+++ b/DotnetApiBoilerplatev1.0.BusinessLogic/DotnetApiBoilerplatev1.0.BusinessLogic.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\Base\" />
+    <PackageReference Include="NLog" Version="5.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DotnetApiBoilerplatev1.0.Data\DotnetApiBoilerplatev1.0.Data.csproj" />
   </ItemGroup>
 
 </Project>
