Add implementation for Base Api

--- a/DotnetApiBoilerplatev1.0/DotnetApiBoilerplatev1.0.csproj
+++ b/DotnetApiBoilerplatev1.0/DotnetApiBoilerplatev1.0.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DotnetApiBoilerplatev1.0.BusinessLogic\DotnetApiBoilerplatev1.0.BusinessLogic.csproj" />
+    <ProjectReference Include="..\DotnetApiBoilerplatev1.0.Data\DotnetApiBoilerplatev1.0.Data.csproj" />
+  </ItemGroup>
+
 </Project>
